# qdrant-search.learn

./: .env.base  .gitignore  README.md  main.py  neural_searcher.py  prepare_vectors.py  pyproject.toml  service.py  upload_vectors.py
