[project]
name = "qdrant-search-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.124.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "qdrant-client>=1.16.1",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
]
